# minisplit-control

./: .gitignore  README.md  pyproject.toml
minisplit-control/: main.py  test.txt
minisplit-control/arduino_code/recieve/: PinDefinitionsAndMore.h  Recieve.ino
minisplit-control/arduino_code/send/: Send.ino
minisplit-control/reverse_engineering_samples/: binary  example  kitchen_remote  master_bedroom_remote  test.txt
